# gpui-liveplot

./: CHANGELOG.md  Cargo.toml  README.md
examples/: advanced.rs  basic.rs
src/: lib.rs  plot.rs  style.rs
src/gpui_backend/: constants.rs  frame.rs  link.rs  mod.rs  paint.rs  view.rs
src/render/: mod.rs
