[package]
name = "gpui-liveplot"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
description = "High-performance append-only plotting for GPUI applications."
license = "MIT"
repository = "https://github.com/Modolet/gpui-liveplot"
homepage = "https://github.com/Modolet/gpui-liveplot"
documentation = "https://docs.rs/gpui-liveplot"
readme = "README.md"
keywords = ["gpui", "plot", "telemetry", "streaming", "visualization"]
categories = ["gui", "visualization"]

[lib]
path = "src/lib.rs"

[features]
default = []
gpui_component_theme = ["dep:gpui-component"]

[dependencies]
gpui = { version = "0.2.2" }
gpui-component = { version = "0.5.1", optional = true, default-features = false }
