[package]
name = "gpui-liveplot"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
description = "High-performance append-only plotting for GPUI applications."
license = "MIT"
repository = "https://github.com/Modolet/gpui-liveplot"
homepage = "https://github.com/Modolet/gpui-liveplot"
documentation = "https://docs.rs/gpui-liveplot"
readme = "README.md"
keywords = ["gpui", "plot", "telemetry", "streaming", "visualization"]
categories = ["gui", "visualization"]

[lib]
path = "src/lib.rs"

[features]
default = ["gpui_component_theme"]
gpui_component_theme = ["dep:gpui-component"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "42ba961075b16aaf35d48631f0ce4e1a4196d983" }
gpui-component = { git = "https://github.com/brendon-felix/gpui-component", optional = true, default-features = false }
